Howdy test change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<img src="https://cdn2.iconfinder.com/data/icons/avatars-99/62/avatar-370-456322-512.png" heigh="150px" width="150px" alt="headshot" />
 		<hr>
 		<h2><i>About Me</i></h2>
-		<p>Hello, I am a dedicated and detail oriented web development student excited to learn more about web development so I can make cool websites.</p>
+		<p>Howdy, I am a dedicated and detail oriented web development student excited to learn more about web development so I can make cool websites.</p>
 		<h2><i>Projects</i></h2>
 		<ul>
 			<li>This Website</li>
